--- a/manuscript.tex
+++ b/manuscript.tex
@@ -133,7 +133,7 @@
            country={Brazil}}
 
 \begin{abstract}
-In the plastic bag extrusion process, it is necessary to determine the optimal processing time for batches formed by different products, which are processed simultaneously by the same extruder, but with different processing rates. The batch processing time must be determined in order to meet a series of known constraints, such as the limitation for the quantity produced for each product and for the quantity produced for the set of all products in the same batch. In this paper we present this problem as a new combinatorial optimization problem named Multi-product Batch Processing Time Maximization (MBPTM) problem. We also present a mathematical model for the MPBPTM problem and an analytical solution method with polynomial time complexity, which proved to be able to obtain optimal solutions for several benchmarks in a very short time, even for very large instances.
+In the plastic bag extrusion process, it is necessary to determine the optimal processing time for batches formed by different products, which are processed simultaneously by the same extruder, but with different processing rates. The batch processing time must be determined in order to meet a series of known constraints, such as the limitation for the quantity produced for each product and for the quantity produced for the set of all products in the same batch. In this paper we present this problem as a new combinatorial optimization problem named Multi-product Batch Processing Time Maximization (MBPTM) problem. We also present a mathematical model for the MBPTM problem and an analytical solution method with polynomial time complexity, which proved to be able to obtain optimal solutions for several benchmarks in a very short time, even for very large instances.
 \end{abstract}
 %%Graphical abstract
 \begin{graphicalabstract}
@@ -149,7 +149,7 @@ In the plastic bag extrusion process, it is necessary to determine the optimal p
 \end{highlights}
 
 \begin{keyword}
-multiproduct batch \sep processing time maximization \sep analytical solution \sep C++ \sep LINGO
+multiproduct batch \sep processing time maximization \sep mathematical model \sep analytical solution \sep LINGO
 \end{keyword}
 \end{frontmatter}
 
@@ -159,18 +159,22 @@ multiproduct batch \sep processing time maximization \sep analytical solution \s
 \section{Introduction}
 \label{sec:intro}
 
+Starting a working day... 
+Tasks finish tests using LINGO on optimization mode.
+Submit paper again to journal.
+
 The scientific literature presents several papers that address multi-product batch problems. Many works target the problem of multi-product batch scheduling (MPBS), in which it is necessary to determine the production sequence of the products and the ideal batch size for each product, in a production of several products which share the same production facilities and for which demand is known \citep{Eilon1985}. In this problem, a single product is processed at a time, so it is necessary that the quantity produced is sufficient to meet the demand during the period in which other products are being processed. The solution must be determined in such a way that both setup and storage costs are minimized. Among the authors who addressed this problem are \cite{Eilon1985}, \cite{Omega1993} and \cite{LiuEtAl2020}. \cite{MendezEtAll2000} and \cite{ShiEtAll2017} present two parallel multi-product batch scheduling (PMPBS) problems, in which production units of the same type are arranged in parallel, forming each production stage. In this case, it is also necessary to define in which units each product will be processed. The authors also take into account other constraints for the problem (\emph{e.g.}, release time and due date for the products, and sequencing constraints due to mismatched product colors sequences) and other goals (\emph{i.e.}, optimize customer satisfaction and/or the plant performance). In the papers mentioned above, production in a single unit or in a serial flowshop plant is considered, in which all products follow a linear flow through the production stages. \cite{KimEtAl1996} consider the multi-product batch problem in networked processes. As defined by the authors, in this case, the production units are not arranged in lines, and the connection between the units may or may not exist. Therefore, the production paths in the flowshop network can be different for each product. Also the passing of previous batch can be possible so that the final sequence of the production at the last stage units can be different from the initial sequence. In all papers presented above, each batch contains only one product type, and each machine can process only one batch (or product type) at a time. \cite{LiEtAl2022} deal with a PMPBS problem involving incompatible families with different job sizes and capacity constraints. In this problem, solutions are accepted in which two or more batches are processed simultaneously on the same machine. However, there are no production limitations for the production of each product group. The paper of \cite{LiEtAl2022} also presente an extensive literature review on production batch scheduling problems. Other important works deal with the problem of a multi-product batch plant design (MPBPD). In this case the problem is to obtain the configuration of the plant and the equipment that minimize the capital cost of all the equipment items needed to fulfill the production requirements (Ravemark and Rippin, 1998).
 
 In this work, we are concerned with determining the ideal processing time for a single batch consisting of a set of products, each product being or not different from the other products of the same batch. That is, we consider a specific case where different products are processed simultaneously on the same processor. This case occurs, for example, during the processing of plastic bags in extruders, where the resins are melted, then pass through a cylinder forming a balloon and this balloon, after cooling, is stored in a coil which, in turn, is cut into several smaller coils with different models of plastic bags.
 
-As scientific contributions, in this paper we define a new multi-product batch problem, named multi-product batch processing time maximization (MPBPTM) problem, as well as a mathematical model and a polynomial time complexity analytical solution optmization method for solving this problem.
+As scientific contributions, in this paper we define a new multi-product batch problem, named multi-product batch processing time maximization (MBPTM) problem, as well as a mathematical model and a polynomial time complexity analytical solution optmization method for solving this problem.
 
 In the next sections, a presentation of problem is made along with an application example. Section \ref{sec:mathModel} presents an interger linear mathematical model for the problem and section \ref{sec:analyticalSol} presents an analytical method for its solution. Section \ref{sec:results} presents the tests and results obtained by a solver in C++ applying the analytical solution and a solver developed in LINGO to new proposed benchmarks. In sections \ref{sec:contributions} and \ref{sec:acknowledgments}, the contributions to this work are informed and acknowledgments are given, respectively. Finally, section \ref{sec:conclusions} presents the paper's conclusions and suggestions for future works.
 
 \section{Multi-product batch processing time maximization problem}
 \label{sec:MBPTMP}
 
-The multi-product batch processing time maximization problem arises when a set of different products are processed simultaneously in a same production batch. In this problem, it is considered that the quantity produced of each product is directly proportional to the processing time, however, with a different constant of proportionality (production rate) for each product. In addition, there is a maximum quantity allowed for the production of batch products, defined both individually and for the set. The maximum production quantity of each product is mainly defined according to the demand for the product. However, it is still possible to stock the products and/or send them to the outlets. In both cases, there is a stocking/shipping limit for each product and a stocking/shipping limit for the set of products in the batch. Also, there is a time limit available for processing the batch. About the production, the industry manager has as priority to meet demand and he prefer to send the remaining production to outlets rather then stock it in the factory. 
+The multi-product batch processing time maximization problem arises when a set of different products are processed simultaneously in a same production batch. In this problem, it is considered that the quantity produced of each product is directly proportional to the processing time, however, with a different constant of proportionality (production rate) for each product. In addition, there is a maximum quantity allowed for the production of batch products, defined both individually and for the set. The production quantity of each product is mainly defined according to the demand for the product. However, it is still possible to stock the products and/or send them to the outlets. In both cases, there is a stocking/shipping limit for each product and a stocking/shipping limit for the set of products in the batch. Also, there is a time limit available for processing the batch. About the production, the industry manager has as priority to meet demand and he prefer to send the remaining production to outlets rather then stock it in the factory. 
 
 \emph{Example:} A certain machine must process a batch containing 2 different products: A and B. The production rate of A is 60 g/min while the production rate of B is 40 g/min. The factory has free stock for a maximum of 3000 g of any product, and, according to the company's inventory policy, a maximum of 3000 g of product A and 2000 g of product B can be stocked at the factory. There is a demand for 1000 g of product A and 500 g of product B. The factory has an outlet that has free space in stock of 1000 g, which can receive a maximum of 600 g of each product. A maximum time of 100 minutes of this machine can be allocated for processing this batch. When distributing production the priority is to meet demand, then send to outlets and finily stock in factory. What is the maximum possible time for processing this batch and how production must be distributed ? 
 
@@ -260,14 +264,14 @@ T, D_i, O_i, I_i \in  \mathbb{Z}^+ \quad \forall i
 
 where:
 
-Constraints in (2) relate the quantity produced, $P_i$, to batch processing time $T$. Constraints in (3) calculate the quantity produced, $P_i$, as a function of the primary variables, $D_i$, $O_i$ and $I_i$. Constraints in (4), (5), and (7) state that the quantity delivered to demand, the quantity shipped to the autlets, and the factory-stocked quantity of each product must be less than their respective known limits. Constraints (6) and (8) state that both the sum of product quantities sent to the autlets and the sum of product quantities stocked in the factory must be less than their respective maximum allowed values. The restriction in (9) establishes that there is a batch processing time limit, $\textrm{Z}$, that must be respected. As equações em (10) e (11) definem a prioridade de distribuição da produção. And finally, the constraints in (12) inform the nature of the decision variables.
+Constraints in (2) relate the quantity produced, $P_i$, to batch processing time $T$. Constraints in (3) calculate the quantity produced, $P_i$, as a function of the primary variables, $D_i$, $O_i$ and $I_i$. Constraints in (4), (5), and (7) state that the quantity delivered to demand, the quantity shipped to the autlets, and the factory-stocked quantity of each product must be less than their respective known limits. Constraints (6) and (8) state that both the sum of product quantities sent to the autlets and the sum of product quantities stocked in the factory must be less than their respective maximum allowed values. The restriction in (9) establishes that there is a batch processing time limit, $\textrm{Z}$, that must be respected. Equations in (10) and (11) define the production distribution priority. And finally, the constraints in (12) inform the nature of the decision variables.
 
 \section{Analytical solution}
 \label{sec:analyticalSol}
 
-To solve the MBPTM problem we will start considering that, despite equations in (10) and (11) define a priority for production distribution, $T$ is not affected by the way production is distributed betwing demand, outlets and factory inventory. So we can find $T$, by ignoring this equations and, after finding $T$ for the relaxed model, use this eqautions for distribute the production based on the defined priorities.
+To solve the MBPTM problem we will start considering that, despite equations in (10) and (11) define a priority for production distribution, $T$ is not affected by the way production is distributed betwing demand, outlets and factory inventory. So we can find $T$, by ignoring this equations and, after finding $T$ for the relaxed model, solving the production distribution problem based on the defined priorities.
 
-Then, it is possible to consider the factory stock and the outlets stock as single stock, so we have:
+After relaxation of the problem, it is possible to consider the factory stock and the outlets stock as single stock, so we have:
 
 \begin{equation}
 E_i = O_i + I_i
@@ -477,7 +481,7 @@ $E_A = 2300 \textrm{ g}$ e $E_B = 1700 \textrm{ g}$
 After determining a solution, the values of $D_i$, $O_i$ and $I_i$, $\forall i$, can be found by taking a solution from the undetermined system of inequalities:
 
 \begin{equation}
-D_i + O_i + I_i = P_i \quad \forall i
+D_i + O_i + I_i = p_i*T \quad \forall i
 \end{equation}
 
 \begin{equation}
@@ -739,7 +743,7 @@ $\textrm{UI}_i$ & 3000 & 2000 & 1000 & 800 & 3000 & 1000 & 400 & 300 & 200 & 0 &
 \end{center}
 \end{table}
 
-Randomly generated benchmarks were named RMBPTM $\textrm{N}$, being $\textrm{N}$ the number of products. Seeking to enable the reproduction of the results, in the computational construction of the benchmarks we used the function srand((unsigned) source), where source is a defined value. To build the results presented in this work, we used source=0. The benchmarks used for the tests performed can be consulted at github.com/blinded.
+Randomly generated benchmarks were named RMBPTM $\textrm{N}$, being $\textrm{N}$ the number of products. Seeking to enable the reproduction of the results, in the computational construction of the benchmarks we used the function srand((unsigned) source), where source is a defined value. To build the results presented in this work, we used source=0. The benchmarks used for the tests performed can be consulted at github.com/tbfraga/COPSolver.
 
 Table \ref{tab:results} presents the results obtained by applying the analytical method (COPSolver) and the LINGO solver for the solution of the previously presented benchmarks.
 
@@ -752,11 +756,13 @@ problem & LINGO solver & time (s) & analytical method & time (s) \\
 MBPTM 2 & 55 & 0.04 & 55 & 0.001 \\
 MBPTM 3 & 48 & 0.06 & 48 & 0.001 \\
 MBPTM 10 & 30 & 0.09 & 30 & 0.001 \\
-RMBPTM 20 & 100 & 0.08 & 100 & 0.001 \\
-RMBPTM 50 & 98 & 0.12 & 98 & 0.001\\
-RMBPTM 100 & 98 & 0.12 & 98 & 0.002\\
-RMBPTM 1,000 & 78 & 3.10 & 78 & 0.002\\
-RMBPTM 10,000 & 70 & 168.87 & 70 & 0.006 \\
+RMBPTM 20 & 100 & 0.10 & 100 & 0.002 \\
+RMBPTM 50 & 98 & 0.07 & 98 & 0.002\\
+RMBPTM 100 & 98 & 0.11 & 98 & 0.002\\
+RMBPTM 1,000 & 78 & 9.59 & 78 & 0.013\\
+RMBPTM 2,000 & 70 & 3.24 & 70 & 0.027\\
+RMBPTM 5,000 & 70 & 15.28 & 70 & 0.079 \\
+RMBPTM 10,000 & 70 & 58.22 & 70 & 0.185 \\
 \cline {1-5} \\
 \end{tabular}
 \caption{Results obtained with the LINGO solver and the analytical method}
