--- a/multi-period/manuscript.tex
+++ b/multi-period/manuscript.tex
@@ -19,6 +19,9 @@
 
 \documentclass[authoryear,preprint,12pt]{elsarticle}
 
+\usepackage{algorithm}
+\usepackage{algpseudocode}
+
 %% The `ecrc' package must be called to make the CRC functionality available
 %\usepackage{ecrc}
 
@@ -165,17 +168,17 @@ $\textrm{O}$ is the maximum quantity allowed for shipment of all products to out
 
 $\textrm{UO}_i$ is the maximum amount of product $i$ that can be shipped to outlets;
 
+$\textrm{UI}_i$ is the factory free inventory for product $p$ on day 0; 
+
 $\textrm{p}_i$ is the production rate of product $i$;
 
-$\textrm{Z}$ is the timeout for batch processing; \\
+$\textrm{Z}$ is the timeout for batch processing; 
 
 $UI_{id}$ is the maximum quantity allowed for stocking in the factory the product $i$ on day $d$;
 
-being $\textrm{UI}_{i0}$ the maximum quantity allowed for $P_i$;
-
 $I_{d}$ is the free factory storage of all products on the end of the day $d$;
 
-being $\textrm{I}_{0}$ the initial free inventory for all products on factory on the start of the (\emph{first}) planning day ($d=1$); \\
+being $\textrm{I}$ the initial free inventory for all products on factory on the start of the (\emph{first}) planning day ($d=1$); \\
 
 $P_i$ is the amount of product $i$ to be produced on batch on the current date (first planning day);
 
@@ -199,7 +202,7 @@ P_i - \textrm{p}_i * T  = 0 \quad \forall i
 
 \begin{equation}
 \label{eq:mmeq03}
-P_i + UI_{i1} - D_{i1} - O_{i1} = \textrm{UI}_{i0} - \textrm{PO}_{i1}
+P_i + UI_{i1} - D_{i1} - O_{i1} = \textrm{UI}_{i} - \textrm{PO}_{i1}
 \end{equation}
 
 \begin{equation}
@@ -253,264 +256,172 @@ Constraints in (2) relate the quantity produced, $P_i$, to batch processing time
 \section{Exact optimizatin method}
 \label{sec:method}
 
-Uma solução ótima para este problema pode ser construída através de duas etapas, conforme explicado a seguir: \\
-
-\emph{etapa 1: distribuição da produção previamente planejada} \\
-
-passo 1: Desconsidere a produção a ser planejada:
-
-\begin{equation}
-\label{eq:sm01}
-P_i = 0, \forall i
-\end{equation}
-
-passo 2: 
-
-Calcule $D_{i1}$ usando as equações em (\ref{eq:sm02}):
-
-\begin{equation}
-\label{eq:sm02}
-D_{i1} = \min \{\textrm{UD}_{i1}, \textrm{PO}_{i1}\} \quad \forall i
-\end{equation}
-
-Calcule o valor da produção não ainda não alocada, $\textrm{S}_{id}, \forall i$, pelas equações em (\ref{eq:sm03}):
-
-\begin{equation}
-\label{eq:sm03}
-\textrm{S}_{i1} = \textrm{PO}_{i1} - D_{i1}, \quad \forall i
-\end{equation}
-
-Calcule os valores $D_{id}^+$, $\textrm{S}_{id}^+$, $D_{id}^-$ e $\textrm{S}_{id}^-, \forall i$, usando as equações de (\ref{eq:sm04}) à (\ref{eq:sm08}).
-
-\begin{equation}
-\label{eq:sm04}
-D_{i1}^+ = D_{i1}^- = D_{i1}
-\end{equation}
-
-\begin{equation}
-\label{eq:sm05}
-D_{id}^+ =  \min\{(\sum_{k=1}^{d}{\textrm{UD}_{ik}} - \sum_{k=1}^{d-1}{D_{ik}}), (\sum_{k=1}^{d-1}{(\textrm{PO}_{ik} - D_{ik}^+) + \textrm{PO}_{id}})\}  \quad \forall i, \forall (d>1)
-\end{equation}
-
-\begin{equation}
-\label{eq:sm06}
-\textrm{S}_{id}^+ = \textrm{PO}_{id} - D_{id}^+, \quad \forall i, \forall (d>1)
-\end{equation}
-
-\begin{equation}
-\label{eq:sm07}
-D_{id}^- =  \min\{(\sum_{k=2}^{d}{\textrm{UD}_{ik}} - \sum_{k=2}^{d-1}{D_{ik}}), (\sum_{k=1}^{d-1}{(\textrm{PO}_{ik} - D_{ik}^-) + \textrm{PO}_{id}})\}  \quad \forall i, \forall (d>1)
-\end{equation}
-
-\begin{equation}
-\label{eq:sm08}
-\textrm{S}_{id}^- = \textrm{PO}_{id} - D_{id}^-, \quad \forall i, \forall (d>1)
-\end{equation}
-
-Queremos encontrar $D_{id}$, $ D_{id}^- \leq D_{id} \leq D_{id}^+, \forall i,(d>1) $, tal que as restrições em (\ref{eq:sm09}) sejam respeitadas:
-
-\begin{equation}
-\label{eq:sm09}
-D_{id} = \min {x \in \{D_{id}^-, D_{id}^+ \quad | \quad UI_{id} \geq 0\}} \quad \forall i, \forall (d>1)
-\end{equation}
-
-Contudo, para solução do problema, iremos adotar:
-
-\begin{equation}
-\label{eq:sm10}
-D_{id} = D_{id}^- \quad \forall i, \forall (d>1)
-\end{equation}
-
-\begin{equation}
-\label{eq:sm10}
-\textrm{S}_{id} = \textrm{S}_{id}^- \quad \forall i, \forall (d>1)
-\end{equation}
-
-passo 3: Calcule os valores $O_{id}, \forall i, d$, usando as equações em (\ref{eq:sm11}):
-
-\begin{equation}
-\label{eq:sm11}
-O_{id} = \min \{\textrm{S}_{id}, (\textrm{UO}_i - \sum_{k=1}^{d-1}{O_{ik}}) , (\textrm{O}- \sum_{j=1}^{i-1}\sum_{k=1}^{d-1}{O_{jk}}) \} \quad \forall i, d
-\end{equation}
-
-passo 4: 
-
-calcule os valores para $UI_{id}, \forall i, d$, usando as equações em (\ref{eq:mmeq03}) e (\ref{eq:mmeq04})).
-
-calcule os valores para $I_{i}, \forall i$, usando as equações em (5) e (6). \\
-
-\emph{Step 2: MPBPTM problem construction} \\
-
-So, based on calculated values, we built the MPBPTM problem using the equations:
-
-\begin{equation}
-\textrm{UD}_{i} = \textrm{UD}_{i1} - D_{i1} \quad \forall i
-\end{equation}
-
-\begin{equation}
-\textrm{I} = \min_{d} \{I_{d}\}
-\end{equation}
-
-\begin{equation}
-\textrm{UI}_{i} = \min_{d} \{UI_{id}\}, \quad \forall{i}
-\end{equation}
-
-\begin{equation}
-\textrm{O} = \textrm{O} - \sum_{i}{\sum_{d}{O_{id}}}
-\end{equation}
-
-\begin{equation}
-\textrm{UO}_{i} = \textrm{UO}_{i} - \sum_{d}{O_{id}}, \quad \forall i
-\end{equation} \\
-
-Being $\textrm{p}_{i}$ and $\textrm{Z}$ defined according to the MPMPBPTM problem presented. \\
-
-Obs: Note that some values of $UI_{id}$ and  $I_{d}$ can be negative. This means that, in prior planning, some demand of the first day will be met by some previous planned production performed in a future period and that cannot be modified, i.e. $D_{id} > D_{id}^-$ for at least one ordained pair $(i,d)$. In this case, considering that prior planning was a viable planning, the negative values of the $UI_{id}$ and $I_{d}$ will be offset by the positive surplus values of $\textrm{UD}_{i}$, so this will not result in change in the optimal solution of the problem through the method used in the next step. \\
-
-The possible negative maximum values for variables are defined by the following equations. If this equations are not met, it means that initial planning was not a viable planning.
-
-\begin{equation}
-\max_d\{UI_{id}\} \geq \textrm{UD}_{i1} - D_{i1}, \quad \forall i
-\end{equation}
-
-\begin{equation}
-\max_d\{I_{d}\} \geq \sum_{i}\{ \textrm{UD}_{i1} - D_{i1} \}
-\end{equation}
-
-\emph{Step 3: MPBPTM solution by Fraga's analytical method} \\
-
-Once the MPBPTM problem is built, it can be solved by the analytical method proposed by Fraga (Fraga et al., 2023). This method can be resumed into two steps, as follows: \\
-
-step 1: find $T^*$, where:
-\begin{equation}
-T^* = \lfloor{\min \{\min_{\forall i} \{(\textrm{UO}_i + \textrm{UI}_i + \textrm{UD}_i) / \textrm{p}_i\},(\textrm{O} + \textrm{I} + \sum_i \textrm{UD}_i) / \sum_i {\textrm{p}_i}\}}\rfloor
-\end{equation}
-
-step 2: calculate $T$, where: 
-
-\begin{equation}
-T = \min \{T^* , \textrm{Z}\}
-\end{equation} \\
-
-\emph{Solution for the example presented before} \\
-
-Applying the method for solving the example presented in section \ref{sec:MBPTMP}, we have: \\
-
-Como planejamento prévio de produção, temos:
-
-$\textrm{P}_{11} = 1000$,
-$\textrm{P}_{12} = 0$,
-$\textrm{P}_{21} = 0$,
-$\textrm{P}_{22} = 1500$. \\
-
-Como demanda, temos:
-
-$\textrm{UD}_{11} = 1000$,
-$\textrm{UD}_{12} = 500$,
-$\textrm{UD}_{21} = 500$,
-$\textrm{UD}_{22} = 300$. \\
-
-Distribuindo a produção para atender à demanda de acordo com as restrições em (9) e (10), temos: \\
-
-$D_{11} = 1000$,
-$D_{12} = 0$,
-$D_{21} = 0$,
-$D_{22} = 300$. \\
-
-Não há nenhuma sobra relativa a produção de A. E há uma sobra de produção de 1200 unidades de B no segundo dia. \\
-
-Como estoque livre nos outlets, temos:
-
-$\textrm{UO}_{1} = 600$;
-$\textrm{UO}_{2} = 600$;
-$\textrm{O} = 1000$; \\
-
-Assim, distribuindo a sobra da produção para os outlets de acordo com as restrições em (7) e (8), temos:
-
-$O_{11} = 0$,
-$O_{12} = 0$,
-$O_{21} = 0$,
-$O_{22} = 600$. \\
-
-Com relação ao estoque livre em fábrica, temos:
-
-$\textrm{UI}_{10} = 3000$,
-$\textrm{UI}_{20} = 2000$,
-$\textrm{I}_{0} = 3000$. \\
-
-Portanto, calculando os valores disponíveis para produção de acordo com as equações em (3), (4) e (5), temos:
-
-$UI_{11} = 3000 - 1000 + 1000 + 0 =  3000$,
-$UI_{12} = 3000 - 0 + 0 + 0 =  3000$,
-$UI_{21} = 2000 - 0 + 0 + 0 =  2000$,
-$UI_{22} = 2000 - 1500 + 300 + 600 =  1400$. \\
-
-$I_{1} = 3000 - 1000 + 1000 + 0 = 3000$,
-$I_{2} = 3000 - 1500 + 300 + 600 = 2400$. \\
-
-Portanto temos agora as informações referentes aos limites estocagem em fábrica diário para cada produto assim como o limite de estocagem em fábrica diário para todos os produtos. \\
-
-Definindo o problema MPBPTM, temos: \\
-
-$\textrm{UD}_{1} = 1000 - 1000 = 0$,
-$\textrm{UD}_{2} = 0$ . \\
-
-$\textrm{I} = \min_{d} \{3000, 2400\} = 2400$. \\
-
-$ \textrm{UI}_{1} = \min_{d} \{3000, 3000\} = 3000 $,
-$ \textrm{UI}_{2} = \min_{d} \{2000, 1400\} = 1400 $. \\
-
-$\textrm{O} = 1000 - 600 = 400.$ \\
-
-$\textrm{UO}_{1} = 600 - 0 = 600$, 
-$\textrm{UO}_{2} = 600 - 600 = 0$. \\
-
-$\textrm{p}_{1} = 60$,
-$\textrm{p}_{2} = 40$.  \\
-
-$\textrm{Z} = 100$.  \\
-
-Então, aplicando o método de partição do tempo proposto pro Fraga, temos: \\
-
-$T' = 0 \textrm{ min}$ \\
-
-Then:\\
-
-$S_A = 0 \textrm{ g}$ \\
-
-$S_B = 0 \textrm{ g}$ \\
-
-And so we have: \\
-
-$T'' \leq \lfloor{(3000 \textrm{ g} + 600 \textrm{ g} + 0 \textrm{ g}) / (60 \textrm{ g}/\textrm{min})}\rfloor$ \\
-
-$T'' \leq 60 \textrm{ min}$ \quad for A \\
-
-$T'' \leq \lfloor{(1400 \textrm{ g} + 0 \textrm{ g} + 0 \textrm{ g}) / (40 \textrm{ g}/\textrm{min})}\rfloor$ \\
-
-$T'' \leq 35 \textrm{ min}$ \quad for B \\
-
-$T'' \leq \lfloor{(400 \textrm{ g} + 2400 \textrm{ g} + 0 \textrm{ g}) / (100 \textrm{ g}/\textrm{min})}\rfloor$ \\
-
-$T'' \leq 28 \textrm{ min}$ \quad for A and B \\
-
-So that: \\
-
-$T'' = 28 \textrm{ min}$ \\
-
-So we have: \\
-
-$T = 28 \textrm{ min}$ \\
-
-As $T<\textrm{Z}$, then $T = 28 \textrm{ min}$ will certainly be the optimal solution. \\
-
-In this case we will have: \\
-
-$P_A = 1,680  \textrm{ g}$ e $P_B=1,120 \textrm{ g}$ \\
-
-$D_A = 0 \textrm{ g}$ e $D_B = 0 \textrm{ g}$ \\
-
-$E_A = 1,680 \textrm{ g}$ e $E_B = 1,120 \textrm{ g}$ \\
+Uma solução ótima para este problema pode ser construída através de seis etapas, conforme algoritmos apresentados a seguir: \\
+
+\begin{algorithm}
+\caption{Solving MMBPTM problem | Part 01 - distribution planned production ignoring restrictions defined for the set.}\label{alg:part01}
+\begin{algorithmic}
+	\Require $\textrm{UD}_{id}, \textrm{PO}_{id}, \textrm{UO}_i, \textrm{UI}_i, \forall i; \textrm{O}, \textrm{I}$.
+	
+	\State $I_{1} \gets \textrm{I} - \sum\{\textrm{PO}_{i1}\}$
+	\State $O \gets \textrm{O}$
+	
+	\For{all $i$}
+		\State $D_{i1} \gets \min \{\textrm{UD}_{i1}, \textrm{PO}_{i1}\}$
+		\State $UI_{i1} \gets \textrm{UI}_i - \textrm{PO}_{i1} + D_{i1}$
+		\State $I_{1} \gets I_{1} + D_{i1}$
+		
+		\If{$UI_{i1} < 0$}
+			\State $O_{i1} \gets - UI_{i1}$
+			\State $UO_i \gets \textrm{UO}_i - O_{i1}$
+			\State $O \gets O - O_{i1}$
+			\State $I_{1} \gets I_{1} + O_{i1}$
+			\State $UI_{i1} \gets 0$
+			\If{$UO_i < 0 \textbf{ or } O < 0$}
+			\State \textbf{Return:} planning is not feasible
+			\EndIf
+		\EndIf
+	\EndFor
+	
+	\For{all $d>1$}
+		
+		\State $I_{d} \gets  I_{d-1} - \sum\{\textrm{PO}_{id}\}$
+	
+		\For{all $i$}
+			\State $UD_{id} \gets \sum_{k=1}^{d}\{\textrm{UD}_{ik}\} - \sum_{k=1}^{d-1}\{D_{ik}\}$
+			\State $A_{id} \gets \min\{\sum_{k=1}^{d-1}\{\textrm{PO}_{ik} - D_{ik} - O_{ik}\}\}  + 						\textrm{PO}_{id}$ 
+			\State $D_{id} \gets  \min\{UD_{id}, A_{id}\}$
+			\State $UI_{id} \gets UI_{i(d-1)} - \textrm{PO}_{id} + D_{id}$
+			
+			\State $I_{d} \gets I_{d} + D_{id}$
+		
+			\If{$UI_{id} < 0$}
+				\State $O_{i1} = - UI_{i1}$
+				\State $UO_i = UO_i - O_{id}$
+				\State $O \gets O - O_{id}$
+				\State $I_{d} \gets I_{d} + O_{id}$
+				\State $UI_{id} = 0$
+				\If{$UO_i < 0 \textbf{ or } O < 0$}
+					\State \textbf{Return:} planning is not feasible
+				\EndIf
+			\EndIf
+		\EndFor
+	\EndFor
+	
+	\State \textbf{Return:} $O_{id}, UI_{id}, \forall (i, d); I_d, \forall d; UO_i, \forall i; O$.
+\end{algorithmic}
+\end{algorithm}
+
+\begin{algorithm}
+\caption{Solving MMBPTM problem | Part 02 - adjustment for atteining feasiability.}\label{alg:part02}
+\begin{algorithmic}
+	\Require $O_{id}, UI_{id}, \forall (i, d); I_d, \forall d; UO_i, \forall i; O$.
+	
+	\For{all $d$}
+		\If{$I_{d} < 0$}
+			\For{all $i$}
+				\If{$UO_i \geq |I_{d}|$}
+					\State $O_{id} \gets O_{id} - I_{d}$
+					\State $UO_i \gets UO_i + I_{d}$
+					\State $O \gets O + I_{d}$
+					\For{all $k \geq d$}
+						\State $UI_{ik} \gets UI_{ik} - I_{d}$
+						\State $I_{k} \gets I_{k} - I_{d}$
+					\EndFor
+					\State break;
+				\Else 
+					\State $O_{id} \gets O_{id} + UO_i$
+					\State $UO_i \gets 0$
+					\State $O \gets O - UO_i$
+					\For{all $k \geq d$}
+						\State $UI_{ik} \gets UI_{ik} + UO_i$
+						\State $I_{k} \gets I_{k} + UO_i$
+					\EndFor
+				\EndIf
+			\EndFor
+		\EndIf
+	\EndFor
+	
+	\State \textbf{Return:} $O_{id}, UI_{id}, \forall (i, d); I_d, \forall d; UO_i, \forall i; O$.
+\end{algorithmic}
+\end{algorithm}
+
+\begin{algorithm}
+\caption{Solving MMBPTM problem | Part 03 - generating a MBPTM problem.}\label{alg:part03}
+\begin{algorithmic}
+	\Require $O_{id}, UI_{id}, \forall (i, d); I_d, \forall d; UO_i, \forall i; O$.
+	
+	\For{all $i$}
+		\State $\textrm{UD}_{i} = UD_{i1}$
+		\State $\textrm{UO}_i = UO_i$
+		\State $\textrm{UI}_i = \min_d\{UI_{id}\}$
+	\EndFor
+	
+	\State $\textrm{O} = O$
+	\State $\textrm{I} = \min_d\{I_{d}\}$
+	
+	\State \textbf{Return:} $\textrm{UD}_{i}, \textrm{UO}_i, \textrm{UI}_i, \forall i; \textrm{O}, \textrm{I}$.
+\end{algorithmic}
+\end{algorithm}
+
+\begin{algorithm}
+\caption{Solving MMBPTM problem | Part 04 - find an optimal $T$ to the MBPTM problem.}\label{alg:part04}
+\begin{algorithmic}
+	\Require $\textrm{UD}_i, \textrm{UO}_i, \textrm{UI}_i, \textrm{p}_i, \forall i, \textrm{O}, \textrm{I}, \textrm{Z}$
+	\State $T^* \gets \lfloor{\min \{\min_{\forall i} \{(\textrm{UO}_i + \textrm{UI}_i + \textrm{UD}_i) / \textrm{p}_i\},(\textrm{O} + \textrm{I} + \sum_i \textrm{UD}_i) / \sum_i {\textrm{p}_i}\}}\rfloor$
+	\State $T \gets \min \{T^* , \textrm{Z}\}$
+\State \textbf{Return:} $T$.
+\end{algorithmic}
+\end{algorithm}
+
+\begin{algorithm}
+\caption{Solving MMBPTM problem | Part 05 - calculate $D_i$, $O_i$ and $I_i$, $\forall i$, ignoring the restrictions defined for the set.}\label{alg:part05}
+\begin{algorithmic}
+	\Require $\textrm{UD}_i, \textrm{UO}_i, \textrm{UI}_i, \textrm{p}_i, \forall i, \textrm{O}, \textrm{I}, \textrm{Z}, T$.
+	\For{all i}
+		\State $P_i \gets T * \textrm{p}_i$
+		\State $D_i \gets \min \{\textrm{UD}_i, E_i\}$
+		\State $E_i \gets P_i - D_i$
+		\State $O_i \gets \min \{\textrm{UO}_i, E_i\}$
+		\State $E_i = E_i - O_i$
+		\State $\textrm{UO}_i = \textrm{UO}_i - O_i$
+		\State $I_i = E_i$
+		\State $\textrm{UI}_i = \textrm{UI}_i - I_i$
+	\EndFor
+	\State $SO = \textrm{O} - \sum_i{O_i}$
+	\State $SI = \textrm{I} - \sum_i{I_i}$
+	\State \textbf{Return:} $D_i, O_i, I_i, P_i, E_i, \textrm{UO}_i, \textrm{UI}_i, \forall i, SO, SI$.
+\end{algorithmic}
+\end{algorithm}
+
+\begin{algorithm}
+\caption{Solving MMBPTM problem | Part 06: redistribute production to comply with limitation restrictions for the batch products set.}\label{alg:part06}
+\begin{algorithmic}
+\Require $O_i, I_i, \textrm{UO}_i, \textrm{UI}_i, \forall i, SO, SI$.
+\If{$SO < 0$}
+\For{all $i$}
+	\State $O_i \gets O_i - \min\{ O_i, UI_i, |SO|\}$
+	\State $I_i \gets I_i + \min\{ O_i, UI_i, |SO|\}$
+	\State $SO \gets SO + \min\{ O_i, UI_i, |SO|\}$
+	\If{$SO = 0$}
+		break looping for;
+	\EndIf
+\EndFor
+\EndIf
+
+\If{$SI < 0$}
+\For{all $i$}
+	\State $I_i \gets I_i - \min\{ I_i, UO_i, |SI|\}$
+	\State $O_i \gets O_i + \min\{ I_i, UO_i, |SI|\}$
+	\State $SI \gets SI + \min\{ I_i, UO_i, |SI|\}$
+	\If{$SI = 0$}
+		break looping for;
+	\EndIf
+\EndFor
+\EndIf
+\State \textbf{Return:} $O_i, I_i, \forall i$.
+\end{algorithmic}
+\end{algorithm}
 
 \section{Tests and results}
 \label{sec:results}
